[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scripts/MainPlayer.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Schluber.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Themes/PressedBtn.tres" type="StyleBox" id=3]
[ext_resource path="res://Assets/circle.png" type="Texture" id=4]
[ext_resource path="res://Assets/light.png" type="Texture" id=5]
[ext_resource path="res://Themes/NormalBtn.tres" type="StyleBox" id=6]
[ext_resource path="res://Assets/Background.jpg" type="Texture" id=7]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Background.gd" type="Script" id=9]
[ext_resource path="res://Assets/Sounds/button.wav" type="AudioStream" id=10]

[sub_resource type="PhysicsMaterial" id=6]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=5]
radius = 27.0

[sub_resource type="DynamicFont" id=4]
size = 90
font_data = ExtResource( 2 )

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="CanvasModulate" type="CanvasModulate" parent="Background"]
color = Color( 0.278431, 0.211765, 0.211765, 1 )

[node name="Background" type="Sprite" parent="Background"]
modulate = Color( 0.32549, 0.341176, 0.823529, 1 )
position = Vector2( 288, 512 )
scale = Vector2( 0.411429, 0.411576 )
texture = ExtResource( 7 )

[node name="Player" type="RigidBody2D" parent="."]
position = Vector2( 288, 480 )
mass = 0.00102041
physics_material_override = SubResource( 6 )
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( 0, 3 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 3 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="Player"]
position = Vector2( 0, 3 )
texture = ExtResource( 5 )
shadow_enabled = true
shadow_gradient_length = 1.0
shadow_filter = 2
shadow_filter_smooth = 20.0

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 0, 0, 576, 0, 576, 1024, 0, 1024, 0, 32, -16, 48, -16, 1040, 592, 1040, 592, -16, -16, -16, -16, 32, 0, 32 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 150
custom_constants/margin_left = 50

[node name="CenterContainer" type="PanelContainer" parent="CanvasLayer/MarginContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 50.0
margin_top = 150.0
margin_right = 526.0
margin_bottom = 1024.0

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/MarginContainer/CenterContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 469.0
margin_bottom = 867.0

[node name="TitleVBox" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer"]
margin_right = 462.0
margin_bottom = 89.0

[node name="TitleContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/TitleVBox"]
margin_right = 462.0
margin_bottom = 89.0

[node name="Game Title" type="Label" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/TitleVBox/TitleContainer"]
margin_left = 62.0
margin_right = 399.0
margin_bottom = 89.0
custom_colors/font_color_shadow = Color( 0.027451, 0.027451, 0.027451, 1 )
custom_constants/shadow_offset_x = 3
custom_constants/line_spacing = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 4 )
text = "CirclEvade"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer"]
margin_top = 101.0
margin_right = 462.0
margin_bottom = 860.0
custom_constants/margin_top = 100

[node name="ButtonVBox" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer"]
margin_top = 100.0
margin_right = 462.0
margin_bottom = 759.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox"]
margin_right = 462.0
margin_bottom = 356.0

[node name="ButtonContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer"]
margin_left = 131.0
margin_right = 331.0
margin_bottom = 356.0
rect_min_size = Vector2( 200, 0 )
custom_constants/separation = 40
alignment = 1

[node name="EndlessBtn" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer"]
material = SubResource( 1 )
margin_right = 200.0
margin_bottom = 59.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "endless"

[node name="LevelsBtn" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer"]
material = SubResource( 1 )
margin_top = 99.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "levels"

[node name="OptionsButton" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer"]
material = SubResource( 1 )
margin_top = 198.0
margin_right = 200.0
margin_bottom = 257.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Options"

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer"]
material = SubResource( 1 )
margin_top = 297.0
margin_right = 200.0
margin_bottom = 356.0
rect_min_size = Vector2( 200, 0 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.666667 )
custom_colors/font_color_pressed = Color( 0.984314, 0.984314, 0.984314, 0.188235 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
text = "Quit"

[node name="ButtonPress" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 3.0

[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer/EndlessBtn" to="." method="_on_EndlessBtn_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer/LevelsBtn" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/CenterContainer/VSplitContainer/MarginContainer/ButtonVBox/CenterContainer/ButtonContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
